# aw-watcher-ax

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  com.aw-watcher-ax.plist  config.toml.example  install.sh  pyproject.toml
app_template/: trampoline.c
app_template/aw-watcher-ax.app/Contents/: Info.plist
app_template/aw-watcher-ax.app/Contents/MacOS/: aw-watcher-ax
aw_watcher_ax/: ax_utils.py  cli.py  config.py  strategies.py  watcher.py
scripts/: create-signing-cert.sh
tests/: test_cli.py  test_config.py  test_strategies.py  test_watcher.py
