[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aw-watcher-ax"
version = "0.3.0"
description = "ActivityWatch watcher that captures context (chat/conversation titles) from focused macOS apps via the Accessibility API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "breakneck", email = "breakneck.mail@gmail.com" }]
keywords = ["activitywatch", "accessibility", "macos", "time-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/breakneck-git/aw-watcher-ax"
Issues = "https://github.com/breakneck-git/aw-watcher-ax/issues"
Source = "https://github.com/breakneck-git/aw-watcher-ax"

[project.scripts]
aw-watcher-ax = "aw_watcher_ax.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aw_watcher_ax"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
